@@ -1,6 +1,10 @@
 Union+concat
+0 AB
 3 X1
-4 YY
 5 X2
 Inter
 4 Y
+Union+concat (with Map.union)
+0 AB
+3 X1
+5 X2
